Manifest files/6. Ingress/vote-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vote-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - "vote.vineethsworld.xyz"
    - "www.vineethsworld.xyz"
  rules:
  - host: vote.vineethsworld.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: voting-service
            port:
              number: 80
  - host: www.vineethsworld.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: voting-service
            port:
              number: 80

  - host: vineethsworld.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: voting-service
            port:
              number: 80
